# whendoist

./: .env.example  .gitignore  BRAND.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  WIZARD_IMPORT_REDESIGN_PROMPT.md  alembic.ini  docker-compose.yml  justfile  nixpacks.toml  openapi.json  package-lock.json  package.json  pyproject.toml  railway.toml
.github/workflows/: ci.yml  copilot-setup-steps.yml  release.yml  sentry-auto-fix.yml
alembic/: README  env.py
alembic/versions/: 20250122_000000_initial_schema.py  20260122_000001_add_external_id_index.py  20260201_235409_add_gcal_sync_error_to_user_preferences.py  20260202_000002_add_gcal_sync.py  20260202_120723_remove_gcal_sync_all_day.py  20260202_182236_move_recurrence_time_to_scheduled_time.py  20260206_180740_rename_clarity_values_executable_to_.py  20260207_045617_rename_clarity_values_to_mode_autopilot_.py  20260209_184326_add_calendar_hour_height_preference.py  20260215_195758_add_export_snapshots.py  20260216_102109_drop_snapshot_frequency_and_retain_.py  20260217_000001_flatten_subtask_depth_and_strip_parent_recurrence.py  20260220_000001_add_composite_index_ix_task_user_parent.py  20260220_234151_drop_due_date_due_time.py  20260222_233639_add_data_version_to_users_and_snapshots.py  20260225_221728_add_analytics_composite_indexes.py  20260301_035641_add_gcal_sync_unique_constraints.py  20260302_160223_add_calendar_feed_token.py  20260304_004153_add_activity_log_table.py  20260304_110817_add_secondary_timezone_preference.py  20260304_205448_add_reminder_minutes_before_to_tasks.py  20260304_230255_add_device_tokens_and_reminder_sent_at.py  20260306_120617_add_reminder_index.py  20260313_150000_add_oauth_tables.py
app/: __init__.py  config.py  constants.py  database.py  logging_config.py  main.py  metrics.py  models.py  sentry_integration.py
app/auth/: google.py  todoist.py
app/middleware/: csrf.py  (+4 more)
docs/: 2026-01-22-ARCHITECTURAL-REVIEW-2.md  2026-01-22-AUDIT-2.md  2026-02-10-energy-selector-placement.md  2026-02-10-mobile-ux-redesign.md  ARCHITECTURAL-REVIEW.md  CALENDAR-DND.md  CALENDAR-FEED.md  COMMAND-PALETTE-RESEARCH.md  COMPETITIVE-GAP-ANALYSIS.md  DEMO-LOGIN.md  DEPLOYMENT.md  ENCRYPTION.md  ERROR-HANDLING.md  GCAL-SYNC-HARDENING.md  GCAL-SYNC-PLAN.md  GCAL-SYNC.md  IMPLEMENTATION-PROMPT.md  KEYBOARD-SHORTCUTS-DISCOVERABILITY-ASSESSMENT.md  KEYBOARD-SHORTCUTS-DISCOVERABILITY-IMPLEMENTATION.md  KEYBOARD-SHORTCUTS-FUTURE-ENHANCEMENTS.md  LEGACY-FRONTEND.md  MCP.md  MIGRATIONS.md  PERFORMANCE.md  POST-1.0-BACKLOG.md  PROD-HARDENING-PLAN.md  PROD-HARDENING-REVIEW.md  PRODUCTION-ROADMAP.md  PWA-VIEWPORT-FIX.md  RECURRING-TASKS-ANALYSIS.md  SECURITY.md  SMART-INPUT.md  SNAPSHOTS.md  SUBTASKS.md  TOAST-SYSTEM.md  UI-POLISH-PLAN.md  V1-ROADMAP-AUDIT.md  V1-ROADMAP.md  WIDGETS.md  apple-glass-redesign-mockup.html
e2e/: mobile-audit.html  mobile-audit.mjs
frontend/: .gitignore  biome.json  components.json  index.html  orval.config.ts  package-lock.json  package.json  vite.config.ts
frontend/src-tauri/: .gitignore  Cargo.toml  Info.ios.plist  build.rs  tauri.conf.json  tauri.ios.conf.json
frontend/src-tauri/capabilities/: default.json  desktop.json  mobile.json
frontend/src-tauri/ios/: Package.swift
frontend/src-tauri/ios/Sources/: NativeTabBarPlugin.swift
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src-tauri/src/commands/: biometric.rs  mod.rs  notifications.rs  widgets.rs
migrations/: 0001_text_columns_for_encryption.sql
scripts/: generate_build_manifest.py  migrate.py  verify_build.py
static/: build-manifest.json  debug-drag.html  debug-pwa.html  manifest.json  sw.js
tests/: README.md  conftest.py  test_activity_log.py  test_api_versioning.py  test_backup_validation.py  test_calendar_cache.py  test_challenge_storage.py  test_constants.py  test_csrf.py  test_data_version.py  test_demo_service.py  test_encryption.py  test_gcal.py  test_health.py  test_hotfix_0_8_13.py  test_hotfix_0_8_5.py  test_hotfix_0_8_6.py  test_hotfix_0_8_7.py  test_hotfix_0_8_8.py  test_hotfix_0_8_9.py  test_hotfix_calendar_toggle.py  test_hotfix_wizard_bugs.py  test_input_validation.py  test_js_module_contract.py  test_labels.py  test_mcp.py  test_passkey.py  test_preferences.py  test_push_router.py  test_push_service.py  test_rate_limiting.py  test_recurrence_service.py  test_reminder_sent_at_reset.py  test_security_headers.py  test_snapshots.py  test_task_filtering.py  test_task_grouping.py  test_task_item_partial.py  test_task_service.py  test_task_sorting.py  (+2 more)
(+657 files in other folders)
