[package]
name = "whendoist"
version = "0.1.0"
edition = "2021"
description = "Whendoist — task scheduling app"

[lib]
name = "whendoist_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-notifications = { version = "0.4", features = ["push-notifications"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = "2"

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSUserDefaults"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"

# Optimize dependencies even in dev builds (your code stays unoptimized for fast recompiles)
[profile.dev.package."*"]
opt-level = 1

# Faster release builds — thin LTO instead of fat (2-3x faster linking)
[profile.release]
lto = "thin"
